# playbot

./: .gitignore  README.md  black-the-code.yml  libdoc_gen.bat  libdoc_gen.sh  output.xml  pyproject.toml  setup.py
.github/workflows/: poetry-publish.yml
docs/: Playbot.html  index.html
playbot/: Playbot.py
playbot/src/: browser.py  context.py  element_handle.py  handle.py  page.py
playwbot/: Playwbot.py
playwbot/src/: browser.py  context.py  handle.py  page.py  utils.py
test/helpers/: TestUtils.py
test/robot/: test.robot  test_2.robot
